syntax = "proto3";

package pb.family.notes;

import "google/api/annotations.proto";

option go_package = "github.com/taeho-io/family/idl/generated/go/pb/family/notes;notes";

service NotesService {
    rpc CreateNote (CreateNoteRequest) returns (CreateNoteResponse) {
        option (google.api.http) = {
            post: "/v1/notes"
            body: "*"
        };
    }

    rpc GetNote (GetNoteRequest) returns (GetNoteResponse) {
        option (google.api.http) = {
            get: "/v1/notes/{note_id}"
        };
    }

    rpc ListNotes (ListNotesRequest) returns (ListNotesResponse) {
        option (google.api.http) = {
            get: "/v1/notes"
        };
    }

    rpc UpdateNote (UpdateNoteRequest) returns (UpdateNoteResponse) {
        option (google.api.http) = {
            put: "/v1/notes/{note.note_id}"
            body: "*"
        };
    }

    rpc DeleteNote (DeleteNoteRequest) returns (DeleteNoteResponse) {
        option (google.api.http) = {
            delete: "/v1/notes/{note_id}"
        };
    }
}

enum ShareType {
    PRIVATE = 0;
    PUBLIC = 1;
}

enum TextType {
    TEXT = 0;
    MARKDOWN = 1;
    HTML = 2;
}

message Note {
    string note_id = 1;
    string created_by = 2;
    string text = 3;
    int64 created_at = 4;
    int64 updated_at = 5;
    ShareType share_type = 6;
    TextType text_type = 7;
}

message CreateNoteRequest {
    Note note = 1;
}

message CreateNoteResponse {
    Note note = 1;
}

message GetNoteRequest {
    string note_id = 1;
}

message GetNoteResponse {
    Note note = 1;
}

message ListNotesRequest {
}

message ListNotesResponse {
    repeated Note notes = 1;
}

message UpdateNoteRequest {
    Note note = 1;
}

message UpdateNoteResponse {
    Note note = 1;
}

message DeleteNoteRequest {
    string note_id = 1;
}

message DeleteNoteResponse {
}
